# iden3-voting

./: .editorconfig  .gitignore  LICENSE  README.md  docker-compose.yaml
backend/: Cargo.toml  Dockerfile  Settings.yaml  docker-compose.yaml
backend/.sqlx/: query-452b47415d2c3d7c46ad13d2eabdf9a6f3e1cdea317c564060e0df0a1d73ff0f.json  query-64da642e84bbb64dc3204a59641de518a4f2aef5e609289f05dce3626dc839a9.json  query-832f7241e74c0e39ce0bc9fcf668762a926a52f9ac180d88553f9bc5a010c578.json  query-924f0a34ffd9c0ff24c4984f5e6a343aaddb58aae05b3e7cb3c408066ed13e4f.json  query-f1809cccdb79e9a4e756f948757ecefa552239a9a855ac7027711ceced98abce.json
backend/abi/: Voting.json
backend/examples/: simple_db_connection.rs  simple_listener.rs
backend/src/: lib.rs  voting.rs
backend/src/abi/: Voting.json
backend/src/config/: mod.rs
backend/src/db/: mod.rs
backend/src/db/migrations/: 0_migration.sql  1_mock_data.sql
backend/src/handlers/: mod.rs
backend/src/listener/: mod.rs
backend/src/poseidon_mt/: mod.rs
backend/src/scripts/: gen_abi.rs
backend/src/utils/: mod.rs
contracts/: .env.example  20231220121043_solhintReport.txt  README.md  hardhat.config.ts  package-lock.json  package.json  tsconfig.json
contracts/circuits/: Voting.circom  helper.sh
contracts/contracts/: Voting.sol
contracts/contracts/utils/: PoseidonSMT.sol  Verifier.sol
contracts/deploy/: 1_token.migration.ts  1_voting.migration.ts
contracts/deploy/helpers/: index.ts
contracts/test/: Voting.ts
contracts/test/helpers/: deposit-withdraw-helper.ts  index.ts  merkle-tree-helper.ts  poseidon-hash.ts  zkp-helper.ts
contracts/test/utils/: IncrementalMerkleTree.ts
frontend/: .dockerignore  .eslintignore  .eslintrc.js  .prettierrc  CHANGELOG.md  Dockerfile  README.md  index.html  nginx.conf  package.json  stylelint.config.js  tsconfig.json  vite.config.ts  werf.yaml
frontend/abi/: Voting.json
frontend/scripts/: release-sanity-check.mjs
frontend/src/: App.vue  config.ts  env.d.ts
frontend/src/common/: Accordion.vue  AppButton.vue  AppLogo.vue  AppNavbar.vue  Collapse.vue  ErrorMessage.vue  NoDataMessage.vue
frontend/src/components/: MajorityCard.vue  ProposalCard.vue  QuorumCard.vue  VotingDetailsHeader.vue  VotingDetailsInfo.vue  VotingHeader.vue  VotingStats.vue
frontend/src/composables/: use-form-validation.ts  use-local-storage.ts
frontend/src/constants/: styles.ts
frontend/src/enums/: route-names.enum.ts
frontend/src/fields/: CheckboxField.vue  InputField.vue  SelectField.vue  TextareaField.vue
frontend/src/forms/: ComplexForm.vue
frontend/src/gateway/: proofs.ts  (+2 more)
(+33 files in other folders)
