[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
config = "0.13.3"
ethers = { version = "2.0.11", features = ["rustls"] }
serde = { version = "1.0.193", features = ["derive"] }
tokio = { version = "1.34.0", features = ["macros", "rt-multi-thread"] }


[[bin]]
name = "backend"
path = "src/bin/main.rs"

[[bin]]
name = "gen-abi"
path = "src/scripts/gen_abi.rs"

[[example]]
name = "simple_listener"
path = "examples/simple_listener.rs"