[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
config = "0.13.3"
ethers = { version = "2.0.11", features = ["openssl", "ws"] }
ff = {package="ff_ce" , version="0.11", features = ["derive"]}
poseidon-rs = "0.0.10"
rand = "0.4"
serde = { version = "1.0.193", features = ["derive"] }
tokio = { version = "1.34.0", features = ["macros", "rt-multi-thread"] }
lazy_static = "1.4.0"
rs_merkle = { git = "https://github.com/KyrylR/rs-merkle.git", rev = "0bc2d677b7a9e12bbd5dd67dd23b885adcdc69fa" }
sqlx = { version = "0.7.2", features = ["runtime-tokio", "postgres", "sqlx-postgres"] }
dotenvy = { version = "0.15.0", default-features = false }

[[bin]]
name = "backend"
path = "src/bin/main.rs"

[[bin]]
name = "gen-abi"
path = "src/scripts/gen_abi.rs"

[[example]]
name = "simple_listener"
path = "examples/simple_listener.rs"

[[example]]
name = "simple_db_connection"
path = "examples/simple_db_connection.rs"

